Interpretor uses Interpretables not Symbols
Interpretors now use Interpretable instances and not symbols.
Evaluators now return Double objects and not double primitive types. Tests
have been updated.